2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_op_assignment): Use stabilize_reference.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_new_array): Correctly handle multi-dimensional
	case.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (handle_op_assignment): Special case RDIV_EXPR.  Use
	stabilize_reference, not save_expr.
	(visit_op_assignment): Use handle_op_assignment.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (handle_double): Swap words on little endian machines.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_this): Rewrote.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (build_long): Rewrote.

2005-10-10  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_op_assignment): Use handle_op_assignment.
	(handle_op_assignment): Handle 'mod' specially.

2005-10-09  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_variable_stmt): Build a series of MODIFY_EXPRs
	to initialize variables.

2005-10-09  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_field_ref): Removed unneeded cast.

2005-10-09  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_field_ref): Removed 'const'.
	(visit_method_invocation): Likewise.

2005-10-08  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* tree.hh (tree_generator): Adjustments for changes in the
	visitor interface for the pretty-printer implementation.

2005-10-07  Ranjit Mathew  <rmathew@gcc.gnu.org>

	* tree.hh (tree_generator): Dummy implementations of new visitor
	methods.

2005-10-04  Tom Tromey  <tromey@redhat.com>

	* tree.cc (visit_field_ref): Handle constant expressions.

2005-10-04  Tom Tromey  <tromey@redhat.com>

	* Make-lang.in (JAVA_OBJS): Added resource.o.
	* resource.cc: New file.
	* treegen.cc (compile_resource): New method.
	* hooks.hh (resource_list): Declare.
	(compile_resource_file, compile_resource_data): Likewise.
	* decl.cc (resource_list): New global.
	* driver.cc (arg_info::resource_name): New field.
	(arg_info): Initialize it.